--- a/Client/WindowResources/LastMessageDictionary.xaml
+++ b/Client/WindowResources/LastMessageDictionary.xaml
@@ -14,8 +14,8 @@
                 <ColumnDefinition Width="48"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Column="0" Text="{Binding Path=Text, Converter={StaticResource FitStringConverter}}" FontSize="12" Foreground="Black" VerticalAlignment="Center" Margin="0,0,5,0"/>
-            <TextBlock Grid.Column="1" Text="{Binding Path=Date, Converter={StaticResource FitDateConverter}}" FontSize="12" Foreground="Black" VerticalAlignment="Center"/>
+            <TextBlock Grid.Column="0" Text="{Binding Path=Text, Converter={StaticResource FitStringConverter}}" FontSize="13" Foreground="Wheat" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <TextBlock Grid.Column="1" Text="{Binding Path=Date, Converter={StaticResource FitDateConverter}}" FontSize="13" Foreground="Wheat" VerticalAlignment="Center"/>
         </Grid>
     </DataTemplate>
 
