--- a/Client/Views/MainWindow.xaml
+++ b/Client/Views/MainWindow.xaml
@@ -60,7 +60,8 @@
                     <TextBlock       x:Name="TextPart"
                                      VerticalAlignment="Center"
                                      FontSize="18"
-                                     Text="{Binding Path=Label}" />
+                                     Text="{Binding Path=Label}"
+                                     Foreground="Wheat"/>
                 </WrapPanel>
 
                 <DataTemplate.Triggers>
