--- a/Client/Views/SettingsUC.xaml
+++ b/Client/Views/SettingsUC.xaml
@@ -20,37 +20,24 @@
         <Grid Margin="30">
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition MinHeight="60" />
                 <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition MinHeight="50"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition/>
-                <RowDefinition Height="40"/>
-                <RowDefinition/>
-                <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Text="User profile" Style="{StaticResource HeaderStyle}"/>
+            <TextBlock Grid.Row="0" Text="User profile" Style="{StaticResource HeaderStyle}" />
 
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-
-                <TextBox Grid.Column="0" Text="{Binding Path=Client.UserName}" Style="{StaticResource TextBoxStyle}"/>
-                <TextBox Grid.Column="1" Text="{Binding Path=Client.UserDesc}" Style="{StaticResource TextBoxStyle}"/>
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <Ellipse Grid.Column="2" Width="50" Height="50" StrokeThickness="3" Stroke="Black" VerticalAlignment="Center">
                     <Ellipse.Fill>
                         <ImageBrush ImageSource="{Binding Path=Client.UserImage}"/>
                     </Ellipse.Fill>
                 </Ellipse>
-            </Grid>
+
+                <TextBlock Grid.Column="0" Text="asd as" Margin="20,0,0,0" Style="{StaticResource TextBlockStyle}" />
+            </StackPanel>
 
             <TextBlock Grid.Row="2" Text="Choose message download step" Style="{StaticResource HeaderStyle}"/>
 
@@ -61,18 +48,21 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
 
-                    <RadioButton Grid.Row="0" Grid.Column="0" IsChecked="{Binding Path=LoadCount1IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount1, Path=Text}"/>
-                    <RadioButton Grid.Row="0" Grid.Column="1" IsChecked="{Binding Path=LoadCount2IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount2, Path=Text}"/>
-                    <RadioButton Grid.Row="0" Grid.Column="2" IsChecked="{Binding Path=LoadCount3IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount3, Path=Text}"/>
+                    <StackPanel Grid.Column="0" Orientation="Horizontal">
+                        <RadioButton Grid.Row="0" Grid.Column="0" IsChecked="{Binding Path=LoadCount1IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount1, Path=Text}"/>
+                        <TextBlock x:Name="messageLoadCount1" Grid.Row="1" Grid.Column="0" Margin="20,0,0,0" Text="30" Style="{StaticResource TextBlockStyle}"/>
+                    </StackPanel>
 
-                    <TextBlock x:Name="messageLoadCount1" Grid.Row="1" Grid.Column="0" Margin="20,0,0,0" Text="30" Style="{StaticResource TextStyle}"/>
-                    <TextBlock x:Name="messageLoadCount2" Grid.Row="1" Grid.Column="1" Margin="20,0,0,0" Text="50" Style="{StaticResource TextStyle}"/>
-                    <TextBlock x:Name="messageLoadCount3" Grid.Row="1" Grid.Column="2" Margin="20,0,0,0" Text="100" Style="{StaticResource TextStyle}"/>
+                    <StackPanel Grid.Column="1" Orientation="Horizontal">
+                        <RadioButton Grid.Row="0" Grid.Column="1" IsChecked="{Binding Path=LoadCount2IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount2, Path=Text}"/>
+                        <TextBlock x:Name="messageLoadCount2" Grid.Row="1" Grid.Column="1" Margin="20,0,0,0" Text="50" Style="{StaticResource TextBlockStyle}"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="2" Orientation="Horizontal">
+                        <RadioButton Grid.Row="0" Grid.Column="2" IsChecked="{Binding Path=LoadCount3IsChecked}" Template="{StaticResource SlideRadioButtonTemplate}" Command="{Binding MessageLoadCountChangedCommand}" CommandParameter="{Binding ElementName=messageLoadCount3, Path=Text}"/>
+                        <TextBlock x:Name="messageLoadCount3" Grid.Row="1" Grid.Column="2" Margin="20,0,0,0" Text="100" Style="{StaticResource TextBlockStyle}"/>
+                    </StackPanel>
                 </Grid>
             </GroupBox>
 
@@ -86,37 +76,6 @@
 
                 <Button Grid.Column="0" Content="Default wallpapers" Command="{Binding DefaultWallpaperShowCommand}" Style="{StaticResource ButtonSettingsStyle}"/>
                 <Button Grid.Column="1" Content="Select from device" Command="{Binding DeviceWallpaperShowCommand}" Style="{StaticResource ButtonSettingsStyle}"/>
-            </Grid>
-
-            <TextBlock Grid.Row="6" Text="Notify rington" Style="{StaticResource HeaderStyle}"/>
-
-            <Grid Grid.Row="7">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition Height="1.5*"/>
-                </Grid.RowDefinitions>
-
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Notify?" Style="{StaticResource TextStyle}"/>
-                <StackPanel Grid.Row="1" Orientation="Horizontal">
-                    <CheckBox Grid.Row="1" Grid.Column="0" Template="{StaticResource SliderCheckBoxTemplate}"/>
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,20,0" Text="{Binding Path=Settings.SelectedRington.Name, StringFormat={}Selected rington: {0}}" Style="{StaticResource TextStyle}"/>
-                </StackPanel>
-
-                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="Choose notify rington" Style="{StaticResource TextStyle}"/>
-                <Button Grid.Column="1" Grid.Row="1" Content="Default ringtons" Style="{StaticResource ButtonSettingsStyle}" Command="{Binding DefaultRingtonShowCommand}"/>
-
-                <Button Grid.Column="2" Grid.Row="1" Content="Select from device" Style="{StaticResource ButtonSettingsStyle}" Command="{Binding DeviceRingtonShowCommand}"/>
-            </Grid>
-
-            <TextBlock Grid.Row="8" Text="About" Style="{StaticResource HeaderStyle}"/>
-
-            <Grid Grid.Row="9">
-
             </Grid>
 
             <icons:PackIconFontAwesome Width="48"
