--- a/Client/WindowResources/SettingsResources.xaml
+++ b/Client/WindowResources/SettingsResources.xaml
@@ -22,10 +22,10 @@
         <Setter Property="Margin" Value="10,0"/>
     </Style>
 
-    <Style x:Key="TextStyle" TargetType="TextBlock">
+    <!--<Style x:Key="TextStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="Foreground" Value="Black"/>
-    </Style>
+    </Style>-->
 
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -33,5 +33,11 @@
         <Setter Property="MaxWidth" Value="350"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="FontSize" Value="18"/>
+    </Style>
+
+    <Style x:Key="TextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="25"/>
+        <Setter Property="Foreground" Value="{StaticResource SettingsForeground}"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
