--- a/Client/WindowResources/ThemeDictionary.xaml
+++ b/Client/WindowResources/ThemeDictionary.xaml
@@ -12,6 +12,7 @@
     <SolidColorBrush x:Key="GroupBackground" Color="#8738ab"/>
     <SolidColorBrush x:Key="DateForeground" Color="#57394a"/>
     <SolidColorBrush x:Key="WritingForeground" Color="#395753"/>
+    <SolidColorBrush x:Key="SettingsForeground" Color="#57394a"/>
 
     <SolidColorBrush x:Key="InputTextBoxBackground" Color="#e0c2c0"/>
     <SolidColorBrush x:Key="InputTextBoxForeground" Color="#57394a"/>
